2004-12-19  Angus Leeming  <leeming@lyx.org>

	* os.h, os_os2.C, os_unix.C, os_win32.C (slashify_path): remove.

	* os_win32.C (init): ensure that the name of the lyx executable is
	stored internally with a unix-style path.

	* os_win32.C (internal_path, external_path): differentiate between
	cygwin and windows builds.

	* filetools.C (FileOpenSearch, GetEnvPath, createDirectory,
	MakeAbsPath, AddName, MakeRelPath, ChangeExtension):
	s/slashify_path/internal_path/.

2004-12-16  Angus Leeming  <leeming@lyx.org>

	* mkdir.C: move the HAVE_MKDIR conditional code out of config.h
	and into here.

2004-12-15  Angus Leeming  <leeming@lyx.org>

	* FileInfo.[Ch] (getNumberOfLinks): removed.

2004-12-15  Angus Leeming  <leeming@lyx.org>

	* tempname.C: #include fcntl.h and sys/stat.h if creating a temp
	file using mktemp and open.

2004-12-14  Angus Leeming  <leeming@lyx.org>
 
	* os.h, os_os2.C, os_unix.C, os_win32.C:
	(binpath, binname, getTmpDir): return a const reference rather than
	a copy of the data.
	(homepath, nulldev): new functions returning the name of "HOME" and
	the null device, respectively.

	* filetools.C: (ExpandPath, MakeDisplayPath): use os::homepath(), not
	GetEnvPath("HOME").

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* os.h, os_{os2,unix,win32}.C (init): change interface to no longer
	pass the addresses of the parameters received by main.

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* copy.C (copy): open the ifstream with ios::binary.

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* os.C: Add _WIN32 to the #define.
 
	* systemcall.C (startscript): remove trailing '/n' from request to
	start the command in a minimized window under DOS.

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* Makefile.am (INCLUDES): Remove trailing slash from -Ifoo/
	to overcome bug in the MinGW port of g++ 3.4.2.

2004-12-07  Angus Leeming  <leeming@lyx.org>

	* *.[Ch]: remove all traces of #pragma interface/implementation
